# Israel-Lara-Caso-Integrador-4

./: CMakeLists.txt  README.md  main.cpp
json/: json11.cpp  json11.h
src/: funciones.cpp  funciones.h  variant.cpp  variant.h
